# scribe

./: CLAUDE.MD  PRD.MD  README.md  floating.html  package-lock.json  package.json  subtitles.html  vite.config.ts
.github/workflows/: build.yml
docs/plans/: 2025-02-04-multi-engine-implementation.md  2026-01-30-openvino-integration-design.md  2026-01-30-openvino-integration-plan.md  2026-01-30-wakascribe-mvp-design.md  2026-01-30-wakascribe-mvp-implementation.md
src/: App.tsx  styles.css  subtitles.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hotkeys.rs  lib.rs  main.rs  platform.rs  ptt.rs  state.rs  tray.rs  types.rs
src-tauri/src/audio/: capture.rs  mod.rs  resampling.rs
src-tauri/src/commands/: file_transcription.rs  integrations.rs  llm.rs  mod.rs  models.rs  settings.rs  snippets.rs  stats.rs  system_integration.rs  transcription.rs
src-tauri/src/engines/: mod.rs  model_manager.rs  parakeet.rs  whisper.rs
src-tauri/src/llm/: groq_client.rs  mod.rs
src-tauri/src/storage/: mod.rs  snippets.rs  stats.rs
src-tauri/src/voice_commands/: executor.rs  mod.rs  parser.rs
src/components/: AudioWaveform.tsx  DictationPanel.tsx  FileTranscription.tsx  FloatingWindow.tsx  HotkeyInput.tsx  SettingsPanel.tsx  StatisticsPanel.tsx  SubtitlesOverlay.tsx  TranscriptionHistory.tsx
src/components/onboarding/: LanguageStep.tsx  ModelStep.tsx  OnboardingWizard.tsx  PermissionStep.tsx  ShortcutsStep.tsx  TestStep.tsx  WelcomeStep.tsx
src/components/settings/: AudioSection.tsx  DictationSection.tsx  DictionarySection.tsx  EngineSection.tsx  IntegrationsSection.tsx  LlmSection.tsx  OptionsSection.tsx  ShortcutsSection.tsx  SnippetsSection.tsx  SystemSection.tsx  TranscriptionSection.tsx  TranslationSection.tsx  index.ts
src/stores/: settingsStore.ts  transcriptionStore.ts
src/types/: index.ts
src/utils/: sounds.ts
