[package]
name = "scribe"
version = "1.0.0"
description = "Scribe - Dictée vocale intelligente"
authors = ["Cyprien BRISSET"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1.35", features = ["full"] }
cpal = "0.15"
hound = "3.5"
sysinfo = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
whisper-rs = "0.14"
reqwest = { version = "0.11", features = ["stream", "json"] }
futures-util = "0.3"
open = "5"
keyring = "3"

# Vosk speech recognition
vosk = "0.2"

# ONNX Runtime for Parakeet (pure Rust, no CMake)
tract-onnx = "0.21"

# Image loading for tray icon
image = "0.25"

# Audio decoding multi-format
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "vorbis"] }

# Audio resampling
rubato = "0.15"

# Zip extraction for model downloads
zip = "0.6"

# LLM local inference via llama.cpp - désactivé temporairement pour ARM64
# llama-cpp-2 = "0.1"

[features]
default = []

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.14", features = ["metal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

